# RPG2D

./: CMakeLists.txt
include/Components/: PlayerInput.hpp  SpriteRender.hpp  Transform.hpp  Velocity.hpp
include/Core/: Component.hpp  Entity.hpp  EntityManager.hpp  Scene.hpp  System.hpp
include/Systems/: AnimationSystem.hpp  CollisionSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp
src/: main.cpp
src/Core/: Entity.cpp  EntityManager.Cpp  Scene.cpp
src/Systems/: AnimationSystem.cpp  CollisionSystem.cpp  InputSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp
